# HyperOS-Directory-Traversal-Analysis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TEST_RAPORU.md  TODO.md  kullanmatalimatlari.md  plan.md  simple.md  simulation.html
.github/: SECURITY.md
.github/workflows/: rust.yml
assets/: README.md  infographic.html
docs/: README.md  SORULAR.md  analysis.md  architecture.md  cozum-onerileri.md  mimari-analiz.md  mitigation.md  zafiyet-analizi.md
poc_python/: exploit.py
poc_rust/: Cargo.toml
poc_rust/src/: main.rs
simulated_server/: simulated_server.py
simulated_server/fake_root/etc/: shadow
simulated_server/fake_root/var/hyperos/: secret_key.pem
simulated_server/fake_root/var/hyperos/themes/: default.theme
simulated_server/templates/: index.html
