[package]
name = "poc_rust"
version = "0.1.0"
edition = "2021"
authors = ["CyberSecurity Student"]
description = "CVE-2025-2844 HyperOS Theme Manager Directory Traversal PoC in Rust"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
urlencoding = "2.1"
